<resources>

    <!--error code -12- 자동로그인을 위한 auth_token 발행 실패 -->

    <!--SplashActivity  string 용 -->
       <!--기기에서 보여지는 앱 이름  -->
       <string name="app_name">중고마켓</string>

    <!-- MainLoginActivity string 용 -->
       <!-- 이메일 로그인 버튼 용 string -->
       <string name="email_login">이메일 로그인</string>
       <!-- 구글 로그인 버튼용 string   -->
       <string name="google_login">Google 로그인</string>
       <!-- 네이버 로그인 버튼용 string  -->
       <string name="naver_login">네이버 로그인</string>
       <!-- 페이스북 로그인 버튼용 string  -->
       <string name="facebook_login">페이스북 로그인</string>
       <!-- 회원가입 엑티비티 연결 버튼용 string  -->
       <string name="btn_for_make_id">처음 이신 가요?? 회원가입입</string>
       <!-- 이메일 로그인 부분 "중고나라 로그인" string   -->
       <string name="string_for_top_of_email_login_activity">중고 마켓 로그인</string>
       <!--sns 이메일  중복값  존재 -->
       <string name="string_for_duplicate_email">해당 sns 이메일은\n다른 가입 경로로 사용중입니다.</string>
       <!-- sns 이메일  체크   서버 에러   -->
       <string name="string_for_duplicate_email_check_server_error">이메일 체크 중  서버 에러 발생</string>

       <!-- 로그인 성공시  자동로그인을 위해 서버로 부터 받은 uid를  저장하는 shared의 name   -->
       <string name="shared_preference_name_for_store_uid">auto_login_uid_shared_preference_name</string>

       <!-- 자동로그인을 위한 서버로 부터 받은 uid 담을 shared key string  -->
       <string name="shared_key_for_auto_login">auto_login_uid</string>


    <!--EmailLoginActivity string 용 -->
       <!--이메일 로그인 아이디 넣는 곳에 hint 아이디 와 패스워드 넣으라 hint 넣어줌. -->
       <string name="string_for_add_hint_on_id_place_in_email_login_activity">" 사용중인  이메일을  적어주세요"</string>
       <string name="string_for_add_hint_on_password_in_email_login_activity">" 사용중인 비밀번호를 적어주세요"</string>
       <string name="string_for_login_button">로그인</string>
       <string name="string_for_find_email_login_id">아이디 찾기</string>
       <string name="string_for_find_email_login_pwd">비밀번호 찾기</string>
       <string name="string_for_no_history_for_join_email">가입한 이력이 없는\n이메일 입니다.</string>
       <string name="string_for_different_email_status">해당 이메일은\n다른 가입 경로로 사용중입니다.</string>
       <string name="string_for_fail_update_auth_token">로그인 도중  에러가 발생하였습니다. error code -12</string>
       <string name="string_for_not_match_password">로그인 비밀번호가 틀립니다!</string>
       <string name="string_for_alert_login_success">성공적으로 로그인 하였습니다</string>
       <string name="string_for_wrong_email_format">이메일 형식이 아닙니다.</string>



    <!-- MakeNewLoginIdActivity 뷰페이져 1 (약관 동의) string용  -->
       <!-- 뷰페이져 1일때 툴바 위치에 들어가는  이용약관 string    -->
       <string name="string1_for_top_of_make_login_id_activity">이용 약관</string>
       <!-- 다음 으로 넘어가는  버튼   -->
       <string name="string_for_check_status_btn_next_step">다 음</string>
       <!-- 이용 약관 첫번째  전체 동의  칸-->
       <string name="string_for_frist_term_pager_entire_check">모두 동의합니다.</string>
       <string name="string_for_frist_term_pager_entire_check_content">이용약관 및  개인정보 방침을 읽었고, \n이에  모두 동의 합니다.</string>
       <string name="string_for_first_term_pager_policy_term_check">이용약관 동의 (필수)</string>
       <string name="string_for_first_term_pager_private_info_usable_check">개인정보 수집 및 이용 동의 (필수)</string>
       <string name="string_for_fail_make_id">회원가입중  문제가 발견되었습니다.</string>
       <string name="string_for_success_make_id">회원가입이 성공적으로 완료되었습니다</string>


    <!-- MakeNewLoginIdActivity 뷰페이져 2(sms 인증) string용  -->
       <!-- 휴대폰 번호 입력 edittext   -->
       <string name="string_for_hint_input_phonenumber_edittext">휴대폰 번호 - 없이 입력 하세요</string>
       <string name="string_for_btn_get_certification_code">인증번호 받기</string>
       <!-- sms 인증번호 코드 입력 editext    -->
       <string name="string_for_hint_input_SMS_certification_code_edittext">문자로 받은 인증번호를 입력하세요</string>
       <string name="string_for_btn_input_certication_code_complete">입력 완료</string>
       <string name="string_for_count_txt">2: 57초 남음</string>





    <!--MakeNewLoginIdActivity  뷰페이저3 (회원가입) string 용 -->
       <!-- 각 edittext 설명을 위한  제목 string-->
       <string name="string_for_title_txt_of_make_login_email">로그인 이메일</string>
       <string name="string_for_title_txt_of_make_login_pwd">비밀 번호</string>
       <string name="string_for_title_txt_of_make_nick_name">닉 네임</string>
       <!-- edittext들  hint 용  string -->
       <string name="string_for_hint_make_new_login_email">사용할  이메일을 입력 하세요</string>
       <string name="string_for_hint_make_new_login_pwd">(영어+숫자 조합 7자리) 입력 !</string>
       <string name="string_for_hint_make_check_new_pwd_again">한번더 비밀번호를 입력 해주세요</string>
       <string name="string_for_hint_make_new_nickname">닉네임을 입력 하세요(최대 10자리)</string>
       <!--중복 확인 button에 들어가는 string -->
       <string name="string_for_check_dupulicate">중복 확인</string>
       <!-- 비밀번호관련 사용가능  체크  string-->
       <string name="string_for_check_accurate_pwd">입력 대기 중</string>
       <!-- 다이얼로그 여기까지 회원가입  진행 string  -->
       <string name="string_for_dialog_make_new_id">여기까지 입력한 정보로 \n회원가입이 진행됩니다\n\n회원가입을 진행하시겠습니까??</string>
       <!-- 뒤로가기 메뉴버튼 눌렸을때  string   -->
       <string name="string_for_back_btn">뒤로가기를 누르면,\n회원가입 취소로 간주됩니다.\n정말 뒤로 가시겠습니까??</string>
       <!-- 선호하는 상품 카테고리 선택시 back btn  -->
       <string name="string_for_back_btn_select_favor_category">선호 상품 카테고리 선택은 \n꼭 해야하는 절차입니다.\n지금 안하더라도,\n로그인시 하셔야 됩니다.\n\n그냥 넘어 가시겠습니까?</string>

      
   <!-- FindLoginEmailAcivity  string 용  -->
      <string name="string_for_top_of_find_login_email_activity">아이디 찾기</string>
      <string name="string_for_finish_btn">완료</string>
      <string name="string_for_plz_insert_phone_number">핸드폰 번호를  입력하세요</string>
      <string name="string_for_not_match_phone_num_regular_expression">핸드폰 번호 특성이 아닙니다.</string>
      <string name="string_for_someone_used_sell_phone">누군가 사용중인 핸드폰 번호 입니다.</string>
      <string name="string_for_problem_on_http_communication">서버 통신 과정에서 문제가 생겼습니다.</string>
      <string name="string_for_rewrite_auth_phone_number">번호 변경시, \n현재 보낸 인증코드는 무효화 됩니다.\n정말 번호 변경을 하시겠습니까? </string>
      <string name="string_for_no">아니오</string>
      <string name="string_for_yes">네</string>
      <string name="string_for_ask_finish_activity">아이디 찾기가 진행중입니다.\n정말 그만두시겠습니까?</string>
      <string name="string_for_email_show_title">해당 번호로 가입된 아이디 입니다.</string>
      <string name="string_for_no_one_use_phone_number">등록된 핸드폰 번호가 아닙니다.</string>

    <!-- FindLoginPwsActivity string  용 -->
      <string name="string_for_top_of_login_pws_activity">비밀 번호 찾기</string>
      <string name="string_for_hint_write_email">사용중인 이메일을 입력 하세요</string>
      <string name="string_for_title_of_input_new_pws">새로운 비밀 번호 입력</string>
      <string name="string_for_wrong_regex_of_phone">핸드폰 번호 형식이 맞지 않습니다.</string>
      <string name="string_for_wrong_regex_of_email">이메일 형식이 맞지 않습니다.</string>
      <string name="string_for_empty_result">작성하신 정보와 일치하는 회원이 없습니다.</string>
      <string name="string_for_sns_email">작성하신 정보는 sns회원 입니다.\n해당 sns 플랫폼에 문의 주세요</string>
      <string name="string_for_back_btn_click">아직 비밀번호 찾기가 진행중입니다.\n정말 그만두시겠습니까?</string>
      <string name="string_for_complete_btn">돌아가기</string>
      <string name="string_for_complete_btn_password_change_available">비밀번호 변경하기</string>
      <string name="string_For_error_on_change_password">비밀번호 변경 중\n에러가 발생했습니다.</string>
      <string name="string_for_change_password_success">비밀번호 변경에 성공 하였습니다!</string>

    <!-- 페이스북 로그인 api  사용관련  key  내용  -->
      <string name="facebook_app_id">1279967912355965</string>
      <string name="fb_login_protocol_scheme">fb1279967912355965</string>




    <!-- 페이스북 가입시  로그인 이메일이 없는 경우     -->
      <string name="face_book_login_email_null_check">해당 페이스북 아이디는\n이메일 형식이 아닙니다.</string>
      <string name="face_book_login_fail_to_register_firbase">페이스북 accees token\n파이어베이스 등록 실패</string>
      <string name="face_login_fail">페이스북 로그인에 실패 하였습니다</string>



    <!-- 메인 bottom navigation view에 메뉴 string  -->
      <string name="menu_for_home">홈</string>
      <string name="menu_for_my_exchange">내 거래</string>
      <string name="menu_for_chatting">채팅</string>
      <string name="menu_for_auction">경매 장</string>
      <string name="menu_for_myspace">내 공간</string>

    <!--  네이버 로그인 api 사용관련  string -->
      <string name="nhn_oauth_client_id">9E9Q7UU3U4Qt7zG_M9k5</string>
      <string name="nhn_oauth_client_secret">zCUERTfMee</string>
      <string name="nhn_oauth_client_name">중고마켓</string>

 
    <!-- main activity 에서  my_space 쪽 -->
       <string name="string_for_edit_profile">프로필 편집</string>
       <string name="string_for_charge_coin">충전</string>
       <string name="string_for_present_coin_amount">현재 보유 코인: %s coin</string>
       <string name="string_for_nickname_null">닉네임 error</string>
       <string name="string_for_my_upload_product">내가 올린 물건 &#160;7개 보기 &#160;및 &#160;새 물건 올리기</string>
       <string name="string_for_my_favorite">관심 목록</string>
       <string name="string_for_exchange_list">거래 내역</string>
       <string name="string_for_auction_vod_list">경매 VOD</string>
       <string name="string_for_game">시간 때우기</string>
       <string name="string_for_logout">로그아웃</string>
       <string name="string_for_logout_alert">정말 로그아웃 하시겠습니까??</string>


     <!-- my_uploaded_list_activity -->
         <string name="string_for_topbar_title">내가 올린 물건들</string>

     <!-- update_user_info_dialog  string-->
         <string name="string_for_dialog_title">내 프로필 편집</string>
         <string name="string_for_profie_img_edit">프로필 사진 편집</string>
         <string name="string_for_nick_name_title">닉네임:</string>
         <string name="string_for_pws_title">비밀번호:</string>
         <string name="string_for_pws_confirmation">비밀번호\n확인:</string>
         <string name="string_for_nickname_hint">바꾸실 닉네임을 입력하세요!</string>
         <string name="string_for_pws_hint">바꾸실 비밀번호를 입력하세요!</string>
         <string name="string_for_pws_check_hint">비밀번호 한번더 입력하세요!</string>
         <string name="string_for_edit_cancel_btn">편집 취소</string>
         <string name="string_for_edit_complete_btn">편집 완료</string>
         <string name="string_for_profile_img_edit_dialog">아래 옵션으로 프로필 사진을 지정하세요!</string>
         <string name="string_for_select_profile_image">프로필 이미지를 선택하세요</string>

     <!-- permission option check dialog string   -->
         <string name="string_for_permission_dialog_title">해당 기능을 이용하시려면, \n권한 설정을 해주셔야 합니다.\n아래 영상을 보고 권한을 \n전부 허용해주세요!</string>


     <!-- profile_img_edit_dialog string   -->
         <string name="string_dialog_title">아래 옵션들로 \n프로필 사진을 수정하세요!</string>
         <string name="string_no_img">사진 없애기</string>
         <string name="string_get_img_gallery">갤러리에서 가져오기</string>
         <string name="string_cancel">취소</string>
         <string name="string_for_return_original_profile">원 상태로 돌아가기</string>
         <string name="string_for_alert_profile_will_change_later">편집 완료 버튼을 눌러야 \n이미지가 바뀝니다!</string>



</resources>
