<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/home"
        android:title="@string/menu_for_home"
        android:icon="@drawable/bottom_nav_home_selector" />
    <item android:id="@+id/exchange"
        android:title="@string/menu_for_my_exchange"
        android:icon="@drawable/bottom_nav_my_exchange_selector" />
    <item android:id="@+id/chatting"
        android:title="@string/menu_for_chatting"
        android:icon="@drawable/bottom_nav_chatting_selector" />
    <item android:id="@+id/auction"
        android:title="@string/menu_for_auction"
        android:icon="@drawable/bottom_nav_auction_selector" />
    <item android:id="@+id/myspace"
        android:title="@string/menu_for_myspace"
        android:icon="@drawable/bottom_nav_my_space_selector" />
</menu>