<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_of_profile_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_view_radius_with_white_background">


    <TextView
        android:id="@+id/txt_for_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="50dp"
        android:fontFamily="@font/cookierun_regular"
        android:text="@string/string_for_nick_name_title"
        android:textColor="@color/colorblack"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image_edit_txt" />

    <TextView
        android:id="@+id/txt_for_pws"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="50dp"
        android:fontFamily="@font/cookierun_regular"
        android:text="@string/string_for_pws_title"
        android:textColor="@color/colorblack"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_for_nickname" />

    <TextView
        android:id="@+id/txt_for_pws_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/cookierun_regular"
        android:gravity="center"
        android:text="@string/string_for_pws_confirmation"
        android:textColor="@color/colorblack"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_for_pws" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/cookierun_bold"
        android:text="@string/string_for_dialog_title"
        android:textColor="@color/colorblack"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittxt_for_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/colorblack"
        android:ems="10"
        android:fontFamily="@font/cookierun_regular"
        android:hint="@string/string_for_nickname_hint"
        android:inputType="text"
        android:textColor="@color/colorblack"
        android:textColorHint="@color/color_grey_hint"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/txt_for_nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/txt_for_nickname"
        app:layout_constraintTop_toTopOf="@id/txt_for_nickname"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.65" />

    <EditText
        android:id="@+id/edittxt_for_pws"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/colorblack"
        android:ems="10"
        android:fontFamily="@font/cookierun_regular"
        android:hint="@string/string_for_pws_hint"
        android:inputType="text"
        android:textColor="@color/colorblack"
        android:textColorHint="@color/color_grey_hint"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/txt_for_pws"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/txt_for_pws"
        app:layout_constraintTop_toTopOf="@id/txt_for_pws"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.65" />

    <EditText
        android:id="@+id/edittxt_for_pws_check"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/colorblack"
        android:ems="10"
        android:fontFamily="@font/cookierun_regular"
        android:hint="@string/string_for_pws_check_hint"
        android:inputType="text"
        android:textColor="@color/colorblack"
        android:textColorHint="@color/color_grey_hint"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/txt_for_pws_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/txt_for_pws_check"
        app:layout_constraintTop_toTopOf="@id/txt_for_pws_check"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.65" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/profile_img"
        app:civ_border_color="@color/colorblack"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.35" />

    <TextView
        android:id="@+id/profile_image_edit_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_background_with_all_black_line"
        android:fontFamily="@font/cookierun_regular"
        android:padding="4dp"
        android:text="@string/string_for_profie_img_edit"
        android:textColor="@color/colorblack"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/profile_image"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/profile_image"
        app:layout_constraintTop_toTopOf="@id/profile_image"
        app:layout_constraintVertical_bias="0.18"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="164dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/change_profile_image_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="profile_image,profile_image_edit_txt" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <Button
        android:id="@+id/btn_for_cancel"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/custom_beige_button_left"
        android:fontFamily="@font/cookierun_regular"
        android:text="@string/string_for_edit_cancel_btn"
        android:textColor="@color/colorblack"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_for_complete"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_for_complete"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/custom_beige_button_right"
        android:fontFamily="@font/cookierun_regular"
        android:text="@string/string_for_edit_complete_btn"
        android:textColor="@color/colorblack"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_for_cancel" />


</androidx.constraintlayout.widget.ConstraintLayout>