<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_view_radius_with_white_background"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.87">


        <EditText
            android:id="@+id/editxt_for_add_phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:fontFamily="@font/cookierun_regular"
            android:gravity="start|center_vertical"
            android:hint="@string/string_for_hint_input_phonenumber_edittext"
            android:inputType="phone"
            android:paddingStart="14dp"
            android:textColor="#000"
            android:textColorHint="#858181"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_for_get_certification_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#000"
            android:background="@drawable/custom_login_btn_for_email_login_in_email_login_activity"
            android:layout_weight="1.4"
            android:fontFamily="@font/cookierun_regular"
            android:text="@string/string_for_btn_get_certification_code" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_view_radius_with_white_background"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/txt_for_show_remain_count_of_input_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.87">


        <EditText
            android:id="@+id/editxt_for_add_certification_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:fontFamily="@font/cookierun_regular"
            android:gravity="start|center_vertical"
            android:hint="@string/string_for_hint_input_SMS_certification_code_edittext"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColor="#000"
            android:textColorHint="#858181"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_for_input_certification_code_complete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#000"
            android:background="@drawable/custom_login_btn_for_email_login_in_email_login_activity"
            android:layout_weight="1.4"
            android:fontFamily="@font/cookierun_regular"
            android:text="@string/string_for_btn_input_certication_code_complete" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_for_show_remain_count_of_input_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_for_count_txt"
        android:textColor="#FF5F54"
        android:textSize="24sp"
        android:fontFamily="@font/cookierun_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>